Fix HTML structure and update links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#profil">Profil</a></li> 
                 <li><a href="#cv">CV</a></li>
-                <li><a href="https://github.com/Djenebadknt/Portfolio/blob/813819718c933e2f717d2765c978f611b446d5cb/Veille%20informatique.docx target="_blank">Veille</a></li>
+                <li><a href="Veille informatique.docx"_blank">Veille</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#projets">Projets</a></li>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="contact-item" style="margin-top: 15px;">
                         <strong>Tableau de Synthèse :</strong><br>
-                        <a href="https://github.com/Djenebadknt/Portfolio/blob/813819718c933e2f717d2765c978f611b446d5cb/Tableau%20de%20synth%C3%A8se.xlsx" target="_blank">Accéder au document ↗</a>
+                        <a href="Tableau de synthèse.xlsx" target="_blank">Accéder au document ↗</a>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                 <h3>Packet Tracer</h3>
                 <p>Certification validant la maîtrise des fonctionnalités de base de l'outil de Packet Tracer.</p>
                 <div class="cert-link">
-                    <a href="https://github.com/Djenebadknt/Portfolio/blob/813819718c933e2f717d2765c978f611b446d5cb/packet%20tracer.pdf" target="_blank">Voir le certificat ↗</a>,
+                    <a href="packet tracer.pdf" target="_blank">Voir le certificat ↗</a>,
                 </div>
             </div>
             
@@ -193,7 +193,7 @@
                 <h3>Introduction à la Cybersécurité</h3>
                 <p>Certification attestant des compétences de base sur la cybersécurité.</p>
                 <div class="cert-link">
-                    <a href="https://github.com/Djenebadknt/Portfolio/blob/813819718c933e2f717d2765c978f611b446d5cb/cybers%C3%A9curit%C3%A9.pdf" target="_blank">Voir le certificat ↗</a>
+                    <a href="cybersécurité.pdf" target="_blank">Voir le certificat ↗</a>
                 </div>
             </div>
             
@@ -212,19 +212,19 @@
 
         <div class="projects-grid">
             <div class="project-card image-project">
-                <img src="https://github.com/Djenebadknt/Portfolio/blob/813819718c933e2f717d2765c978f611b446d5cb/e-portfolio.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
+                <img src="e-portfolio.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
                 <h3>Réalisation de mon e-portfolio</h3>
                 <p>Pour l'examen final du BTS SIO.</p>
             </div>
 
             <div class="project-card image-project">
-                <img src="https://github.com/Djenebadknt/Portfolio/blob/813819718c933e2f717d2765c978f611b446d5cb/site%20capillaire.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
+                <img src="site capillaire.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
                 <h3>Projet :Réalisation d'un site capillaire</h3>
                 <p>Pour une étudiante du CNAM</p>
             </div>
 
             <div class="project-card image-project">
-                <img src="https://github.com/Djenebadknt/Portfolio/blob/813819718c933e2f717d2765c978f611b446d5cb/after%20work.jpg" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
+                <img src="after work.jpg" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
                 <h3>Projet : Organisation événementielle</h3>
                 <p>Chef de projet pour l'after work du 7 octobre</p>
             </div>
@@ -241,4 +241,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
