Restore index.html content

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <h3>Packet Tracer</h3>
                 <p>Certification validant la maîtrise des fonctionnalités de base de l'outil de Packet Tracer.</p>
                 <div class="cert-link">
-                    <a href="packet tracer.pdf" target="_blank">Voir le certificat ↗</a>,
+                    <a href="packet tracer.pdf" target="_blank">Voir le certificat ↗</a>
                 </div>
             </div>
             
@@ -241,5 +241,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
