--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#profil">Profil</a></li> 
                 <li><a href="#cv">CV</a></li>
+                <li><a href="Tableau de synthèse.xlsx"_blank>Tableau de Synthèse</a></li>
                 <li><a href="Veille informatique.docx"_blank">Veille</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#certifications">Certifications</a></li>
@@ -163,8 +164,32 @@
                     <li>Création et gestion de machines virtuelles [VM] </li>
                 </ul>
             </div>
+            
+            <div class="service-card">
+                            <div class="service-icon">🗃️</div>
+                            <h3>Planification de projet</h3>
+                            <ul class="skill-list">
+                                 <li>Définition des objectifs et des livrables du projet</li>
+                                 <li>Gestion des ressources (humaines, matérielles)</li>
+                                 <li>Planification et attribution des tâches</li>
+                                 <li>Suivi des délais et respect des échéances</li>
+                                 <li>Organisation de réunions de suivi de projet</li>
+                                 <li>Gestion de la documentation de projet </li>
+                            </ul>
+                        </div>
 
-        </div>
+             <div class="service-card">
+                <div class="service-icon">👩🏽‍💻</div>
+                <h3>Developpement</h3>
+                <ul class="skill-list">
+                    <li>HTML </li>
+                    <li>CSS</li>
+                    <li>JAVASCRIPT</li>
+                    <li>PHP</li>
+                    <li>SQL(Base de donnée)</li>
+                </ul>
+            </div>
+                
     </section>
 
     <section id="certifications" class="section">
@@ -241,6 +266,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
