--- a/index.html
+++ b/index.html
@@ -237,19 +237,26 @@
 
         <div class="projects-grid">
             <div class="project-card image-project">
-                <img src="e-portfolio.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
+               <a href="https://djenebadknt.github.io/Portfolio/"target="_blank">
+                   <img src="e-portfolio.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
+               </a>
+                
                 <h3>Réalisation de mon e-portfolio</h3>
                 <p>Pour l'examen final du BTS SIO.</p>
             </div>
 
             <div class="project-card image-project">
-                <img src="site capillaire.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
-                <h3>Projet :Réalisation d'un site capillaire</h3>
+               <a href="https://djenebadknt.github.io/site-capillaire/"target="_blank">
+                   <img src="site capillaire.png" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
+               </a>
+                   <h3>Projet :Réalisation d'un site capillaire</h3>
                 <p>Pour une étudiante du CNAM</p>
             </div>
 
             <div class="project-card image-project">
+             <a href="https://djenebadknt.github.io/Portfolio/after%20work.jpg"target="_blank">
                 <img src="after work.jpg" alt="Photo d'un événement au lycée" style="width: 100%; height: auto; display: block; border-radius: 6px; margin-bottom: 20px;">
+             </a>
                 <h3>Projet : Organisation événementielle</h3>
                 <p>Chef de projet pour l'after work du 7 octobre</p>
             </div>
@@ -266,6 +273,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
