--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span class="line">ETUDIANTE</span>
                 <span class="line">EN BTS SIO</span>
                 <span class="line">OPTION SISR</span>
-                <a href="https://github.com/Djenebadknt" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <span class="line"><a href="https://github.com/Djenebadknt" target="_blank"><i class="fa-brands fa-github"></i></a></span>
             </h1>
 
             <p class="hero-description">
@@ -274,6 +274,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
