Change document links to PDF format
Updated links to point to PDF files instead of XLSX and DOCX.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#profil">Profil</a></li> 
                 <li><a href="#cv">CV</a></li>
-                <li><a href="Tableau de synthèse.xlsx"_blank>Tableau de Synthèse</a></li>
-                <li><a href="Veille informatique.docx"_blank">Veille</a></li>
+                <li><a href="Tableau de synthèse.pdf"_blank>Tableau de Synthèse</a></li>
+                <li><a href="Veille informatique.pdf"_blank">Veille</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#projets">Projets</a></li>
@@ -273,6 +273,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
