Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#profil">Profil</a></li> 
                 <li><a href="#cv">CV</a></li>
                 <li><a href="Tableau de synthèse.pdf"_blank>Tableau de Synthèse</a></li>
-                <li><a href="Veille informatique.pdf"_blank">Veille</a></li>
+                <li><a href="Veille informatique.pdf"_blank>Veille</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#projets">Projets</a></li>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="contact-item" style="margin-top: 15px;">
                         <strong>Tableau de Synthèse :</strong><br>
-                        <a href="Tableau de synthèse.xlsx" target="_blank">Accéder au document ↗</a>
+                        <a href="Tableau de synthèse.pdf" target="_blank">Accéder au document ↗</a>
                     </div>
                 </div>
             </div>
@@ -273,6 +273,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
