--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
 
-    <nav>
-        <div class="container">
-            <div class="logo">DIALLO</div>
-            <ul class="nav-links">
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#profil">Profil</a></li> 
-                <li><a href="#cv">CV</a></li>
-                <li><a href="Tableau de synthèse.pdf"_blank>Tableau de Synthèse</a></li>
-                <li><a href="Veille informatique.pdf"_blank>Veille</a></li>
-                <li><a href="#competences">Compétences</a></li>
-                <li><a href="#certifications">Certifications</a></li>
-                <li><a href="#projets">Projets</a></li>
-                
-            </ul>
-        </div>
-    </nav>
+<nav>
+    <div class="container">
+        <div class="logo">DIALLO</div>
+        <ul class="nav-links">
+            <li><a href="#accueil">Accueil</a></li>
+            <li><a href="#profil">Profil</a></li> 
+            <li><a href="#cv">CV</a></li>
+            <li><a href="Tableau de synthèse.pdf" target="_blank">Tableau de Synthèse</a></li>
+            <li><a href="Veille informatique.pdf" target="_blank">Veille</a></li>
+            <li><a href="#competences">Compétences</a></li>
+            <li><a href="#certifications">Certifications</a></li>
+            <li><a href="#projets">Projets</a></li>
+            
+        </ul>
+    </div>
+</nav>
 
     <section id="accueil" class="hero">
         <div class="hero-content">
@@ -273,6 +273,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
